reports/smoke/Linux-Debug-Gargantua/build_log.txt
[  0%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/libMeshb/sources/libmeshb7.c.o
[  1%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/rply/rply.c.o
[  1%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/adler32.c.o
[  2%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/compress.c.o
[  2%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/crc32.c.o
[  3%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/deflate.c.o
[  3%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzclose.c.o
[  4%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzlib.c.o
[  4%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzread.c.o
[  5%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzwrite.c.o
[  5%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inffast.c.o
[  6%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inflate.c.o
[  6%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inftrees.c.o
[  7%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/trees.c.o
[  7%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/uncompr.c.o
[  8%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/zutil.c.o
[  8%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/Factor.cpp.o
[  9%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/Geometry.cpp.o
[  9%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/MarchingCubes.cpp.o
[ 10%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/poisson_geogram.cpp.o
[ 10%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/xatlas/xatlas.cpp.o
In file included from /home/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/poisson_geogram.h:45,
                 from /home/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/poisson_geogram.cpp:40:
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h: In constructor ‘GEO::vecng<2, T>::vecng(const std::initializer_list<_Tp>&)’:
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:564:38: error: ‘DIM’ was not declared in this scope
  564 |                 geo_debug_assert(i < DIM);
      |                                      ^~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/assert.h:150:14: note: in definition of macro ‘geo_assert’
  150 |         if(!(x)) {                                               \
      |              ^
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:564:17: note: in expansion of macro ‘geo_debug_assert’
  564 |                 geo_debug_assert(i < DIM);
      |                 ^~~~~~~~~~~~~~~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h: In constructor ‘GEO::vecng<3, T>::vecng(const std::initializer_list<_Tp>&)’:
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:779:38: error: ‘DIM’ was not declared in this scope
  779 |                 geo_debug_assert(i < DIM);
      |                                      ^~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/assert.h:150:14: note: in definition of macro ‘geo_assert’
  150 |         if(!(x)) {                                               \
      |              ^
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:779:17: note: in expansion of macro ‘geo_debug_assert’
  779 |                 geo_debug_assert(i < DIM);
      |                 ^~~~~~~~~~~~~~~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h: In constructor ‘GEO::vecng<4, T>::vecng(const std::initializer_list<_Tp>&)’:
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:1010:38: error: ‘DIM’ was not declared in this scope
 1010 |                 geo_debug_assert(i < DIM);
      |                                      ^~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/assert.h:150:14: note: in definition of macro ‘geo_assert’
  150 |         if(!(x)) {                                               \
      |              ^
/home/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:1010:17: note: in expansion of macro ‘geo_debug_assert’
 1010 |                 geo_debug_assert(i < DIM);
      |                 ^~~~~~~~~~~~~~~~
make[2]: *** [src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/build.make:342: src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/poisson_geogram.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:696: src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/all] Error 2
make: *** [Makefile:156: all] Error 2
